--- a/site.css
+++ b/site.css
@@ -128,7 +128,7 @@ section h1.bold{
 	margin: 0;
 }
 .project img{
-	max-height:500px;
+	max-width:90%;
 }
 #projects > a{
 	color: black;
@@ -180,4 +180,28 @@ tr:nth-child(even) {
 table a{
 	color: black;
 	text-decoration: none;
+}
+#aboutme p{
+	width:25vw;
+	margin:auto;
+	line-height:1.25;
+}
+@media only screen and (max-width: 1300px){
+	.project, #aboutme p{
+		width:50vw;
+	}
+	.skill{
+		width:50vw;
+	}
+}
+@media only screen and (max-width: 500px){
+	img[src="https://avatars.githubusercontent.com/u/83673744"]{
+		width:90vw;
+	}
+	.project, #aboutme p{
+		width:90vw;
+	}
+	.skill{
+		width:90vw;
+	}
 }
