--- a/site.css
+++ b/site.css
@@ -279,3 +279,9 @@ table a{
 	padding:5px 10px;
 	margin-left:10px;
 }
+#apps{
+	display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
